--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/bank?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=user
-spring.datasource.password=user
+spring.datasource.username=user1
+spring.datasource.password=user1
 
